@startuml

title __DOCTOR's Class Diagram__\n

  package com.hospital.Hospital {
    package com.hospital.Hospital.domain.doctor {
      abstract class Doctor {
          - id : long
          - firstName : String
          - lastName : String
          - canOperate : boolean
          + getId()
          + setId()
          + getFirstName()
          + setFirstName()
          + getLastName()
          + setLastName()
          + isCanOperate()
          + setCanOperate()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domain.doctor {
      class NormalDoctor {
          + NormalDoctor()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domain.doctor {
      class SurgeonDoctor {
          + SurgeonDoctor()
      }
    }
  }
  

  NormalDoctor -up-|> Doctor
  SurgeonDoctor -up-|> Doctor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
